force-app/main/default/objects/sked__Availability_Pattern_Resource__c/sked__Availability_Pattern_Resource__c.object-meta.xml
<CustomObject>
    <label>Availability Pattern Resource</label>
    <nameField>
        <displayFormat>APR-{0000}</displayFormat>
        <label>Availability Pattern Resource Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Availability Pattern Resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>