force-app/main/default/objects/sked__Availability_Pattern_Resource__c/fields/sked__Availability_Pattern__c.field-meta.xml
<CustomField>
    <fullName>sked__Availability_Pattern__c</fullName>
    <label>Availability Pattern</label>
    <referenceTo>sked__Availability_Pattern__c</referenceTo>
    <relationshipLabel>Availability Pattern Resources</relationshipLabel>
    <relationshipName>Availability_Pattern_Resources</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>