force-app/main/default/objects/sked__Availability_Pattern_Resource__c/fields/sked_Availability_Pattern_Name__c.field-meta.xml
<CustomField>
    <fullName>sked_Availability_Pattern_Name__c</fullName>
    <formula>sked__Availability_Pattern__r.Name</formula>
    <label>Availability Pattern Name</label>
    <type>Text</type>
</CustomField>