force-app/main/default/objects/sked__Availability_Pattern_Resource__c/fields/sked_Resource_Primary_CO__c.field-meta.xml
<CustomField>
    <fullName>sked_Resource_Primary_CO__c</fullName>
    <formula>sked__Resource__r.sked_Collection_Operation_Id__c</formula>
    <label>Resource Primary CO</label>
    <type>Text</type>
</CustomField>