force-app/main/default/objects/sked__Availability_Pattern_Resource__c/fields/sked_Resource_Primary_CO_Name__c.field-meta.xml
<CustomField>
    <fullName>sked_Resource_Primary_CO_Name__c</fullName>
    <formula>sked__Resource__r.sked_Biomed_Collection_Op_Center_Name__c</formula>
    <label>Resource Primary CO Name</label>
    <type>Text</type>
</CustomField>