force-app/main/default/objects/sked__Availability_Pattern_Resource__c/fields/sked_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>sked_Start_Time__c</fullName>
    <label>Start Time</label>
    <required>true</required>
    <type>Time</type>
</CustomField>